services/ircd/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ircd
  labels:
    app: ircd
spec:
  replicas: 1 # Will increase in prod
  selector:
    matchLabels:
      app: ircd
  template:
    metadata:
      labels:
        app: ircd
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: ircd
        # The tag will be dynamically substituted by GitHub Actions using sed before apply
        image: ghcr.io/eran-meir/irc/ircd:a0aa77cd15e376ef6cb51ec77b37c58d85ba4d38
        imagePullPolicy: Always
        ports:
        - containerPort: 6667
          name: irc
        - containerPort: 9090
          name: metrics
