services/ircd/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ircd
spec:
  # In k3s, LoadBalancer automatically creates a host port mapping on the node
  type: LoadBalancer 
  selector:
    app: ircd
  ports:
    - protocol: TCP
      port: 6667
      targetPort: 6667
