services/ircd/deploy/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ircd-web-client
  namespace: default
  labels:
    app: ircd-web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ircd-web-client
  template:
    metadata:
      labels:
        app: ircd-web-client
    spec:
      containers:
      - name: web-client
        image: ghcr.io/eran-meir/irc/client:c5919f39db5ee8f002905f669f31967654d6eef1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 50m
            memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ircd-web-client
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ircd-web-client
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ircd-web-client-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - irc.82-70-211-102.sslip.io
    - 82-70-211-102.sslip.io
    secretName: ircd-web-client-tls
  rules:
  - host: irc.82-70-211-102.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ircd-web-client
            port:
              number: 80
  - host: 82-70-211-102.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ircd-web-client
            port:
              number: 80
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: ircd-web-client
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ircd-web-client
            port:
              number: 80
